test/files/neg/virtualized_rowsel_2.check
virtualized_rowsel_2.scala:10: error: value xx is not a member of Test.Rep[Test.MyRow{val xxx: Int}]
  val x: Rep[Int] = qual.xx // becomes `applyDynamicOps[MyRow{val xxx: Int}](qual).applyDynamic[Int]("xxx")()`
                         ^
one error found
